Maybe now it builds?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,13 @@ set(CMAKE_CXX_EXTENSIONS FALSE)
 project(Database)
 
 set( DATABASE_SOURCES
-	src/main.cpp
+	Database/src/main.cpp
+	Database/src/Database.h
+	Database/src/Database.cpp
+	Database/src/Record.h
+	Database/src/Record.cpp
+	Database/src/TextTable.h
+	Database/src/TextTable.cpp
 )
 
 add_executable(${PROJECT_NAME} ${DATABASE_SOURCES})
