--- a/Database/CMakeLists.txt
+++ b/Database/CMakeLists.txt
@@ -8,8 +8,10 @@ set( DATABASE_SOURCES
 	src/Record.cpp
 	src/TextTable.h
 	src/TextTable.cpp
-	src/Menu.h
-	src/Menu.cpp
+	src/DatabaseInterface.h
+	src/DatabaseInterface.cpp
+	src/RecordsManager.h
+	src/RecordsManager.cpp
 )
 
 add_executable(${PROJECT_NAME} ${DATABASE_SOURCES})
